css/styles.css
/* ===== Base ===== */

body {
  font-family: "Roboto", sans-serif;
  color: #434455;
  font-size: 16px;
  background-color: #fff;
}

/* ===== Reset===== */

ul,
ol {
  list-style: none;
  padding-left: 0;
  margin: 0;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

/* ===== Common ===== */

.container {
  max-width: 1158px;
  padding: 0 15px;
  margin: 0 auto;
}

/* ===== Header ===== */

.header-container {
  display: flex;
  align-items: center;
}

.header {
  border-bottom: 1px solid #e7e9fc;
  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
}

address {
  font-style: normal;
}

/* ===== Logo ===== */

.logo,
.footer-logo {
  font-family: "Raleway", sans-serif;
}

.logo {
  font-weight: 700;
  font-size: 18px;
  color: #2e2f42;
  line-height: 1.16;
  letter-spacing: 0.03em;
  text-transform: uppercase;
}

.logo-accent {
  color: #4d5ae5;
}

.logo:hover,
.logo:focus {
  color: #404bbf;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.header-logo {
  padding: 24px 0;
  margin-right: 0;
}

/* ===== Navigation ===== */

.header-nav-container > a {
  color: #2e2f42;
  text-decoration: none;
}

.header-nav-container {
  display: flex;
  align-items: center;
  gap: 76px;
}

.nav-list {
  display: flex;
  align-items: center;
  gap: 40px;
}

.nav-link {
  padding: 24px 0;
  display: block;
  font-weight: 500;
  font-size: 16px;
  color: #2e2f42;
  line-height: 1.5;
  letter-spacing: 0.02em;
  text-decoration: none;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.nav-link:hover,
.nav-link:focus,
.nav-link.current {
  color: #404bbf;
  outline: none;
}

.nav-link.current {
  position: relative;
}

.nav-link.current::after {
  content: "";
  width: 100%;
  height: 4px;
  position: absolute;
  left: 0;
  bottom: -1px;
  background-color: #404bbf;
  border-radius: 2px;
}

/* ===== Contacts ===== */

.contacts-list {
  display: flex;
  align-items: center;
  gap: 40px;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.contacts-list a {
  color: #434455;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  text-decoration: none;
}

.contact-link:hover,
.contact-link:focus {
  color: #404bbf;
}

.contact-link {
  padding: 24px 0;
}

.header-contacts {
  margin-left: auto;
}

/* ===== Hero ===== */

.hero {
  max-width: 1440px;
  margin: 0 auto;
  background-color: #2e2f42;
  padding: 188px 0;
  text-align: center;
  background-image: linear-gradient(
      rgba(46, 47, 66, 0.7),
      rgba(46, 47, 66, 0.7)
    ),
    url("../images/hero-bg.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.hero-title {
  font-weight: 700;
  font-size: 56px;
  line-height: 1.07;
  letter-spacing: 0.02em;
  color: #ffffff;

  max-width: 496px;
  margin: 0 auto 48px;
}

.hero-btn {
  background-color: #4d5ae5;
  color: #ffffff;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  padding: 16px 32px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  letter-spacing: 0.04em;
  min-width: 169px;
  height: 56px;
}

.hero-btn:hover,
.hero-btn:focus {
  background-color: #404bbf;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

/* ===== Features ===== */

.features {
  padding: 120px 0;
}

.features-title {
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
}

.feature-title {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
  margin-bottom: 8px;
}

.feature-text {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.features-list-container {
  display: flex;
  gap: 24px;
}

.feature-item {
  width: calc((100% - 72px) / 4);
}

.features-icon-wrap {
  width: 264px;
  height: 112px;
  background-color: #f4f4fd;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 8px;
}

/* ===== Team ===== */

.team {
  background-color: #f4f4fd;
  padding: 120px 0;
}

.team-title {
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
  margin-bottom: 72px;
}

.team-card {
  background-color: #ffffff;
  width: calc((100% - 72px) / 4);
  border-radius: 0 0 4px 4px;
  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
}

.team-name {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
  text-align: center;
  margin-bottom: 8px;
}

.team-role {
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
  text-align: center;
}

.team-list {
  display: flex;
  gap: 24px;
}

.team-info {
  padding: 32px 16px;
}

.social-links {
  display: flex;
  justify-content: center;
  gap: 24px;
  padding-top: 8px;
}

.social-links .link {
  width: 40px;
  height: 40px;
  background-color: #4d5ae5;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.social-links .icon {
  fill: #f4f4fd;
}

.social-links .link:hover,
.social-links .link:focus {
  background-color: #404bbf;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

/* ===== Footer ===== */

.footer {
  background-color: #2e2f42;
  padding: 100px 0;
}

.footer-container {
  display: flex;
  flex-direction: inline;
  gap: 16px;
}

.footer-logo {
  font-weight: 700;
  font-size: 18px;
  color: #f4f4fd;
  line-height: 1.16;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  text-decoration: none;
}

.footer-logo:hover,
.footer-logo:focus {
  color: #404bbf;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.footer-text {
  max-width: 264px;
  color: #f4f4fd;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  margin-top: 16px;
}

.footer-info {
  margin-right: 120px;
}

.footer-social-media {
  display: flex;
  flex-direction: column;
}

.footer-social-links {
  display: flex;
  justify-content: center;
  gap: 24px;
  padding-top: 8px;
}

.footer-social-links .link {
  width: 40px;
  height: 40px;
  background-color: #4d5ae5;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.footer-social-links .icon {
  fill: #f4f4fd;
}

.footer-social-links .link:hover,
.footer-social-links .link:focus {
  background-color: #31d0aa;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.footer-social-media-text {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #fff;
  margin-bottom: 16px;
}

/* ===== Portfolio ===== */

.portfolio {
  padding: 120px 0;
}

.portfolio-list {
  display: flex;
  flex-wrap: wrap;
  column-gap: 24px;
  row-gap: 48px;
}

.portfolio-card {
  width: calc((100% - 48px) / 3);
  background-color: #ffffff;
  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.portfolio-card:hover,
.portfolio-card:focus-within {
  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
}

.portfolio-info {
  padding: 32px 16px;
  border: 1px solid #e7e9fc;
  border-top: none;
}

.portfolio-title {
  font-size: 36px;
  font-weight: 700;
  text-align: center;
  line-height: 1.11;
  letter-spacing: 0.02em;
  color: #2e2f42;
  margin-bottom: 72px;
}

.portfolio-name {
  font-size: 20px;
  font-weight: 500;
  color: #2e2f42;
  line-height: 1.2;
  letter-spacing: 0.02em;
  margin-bottom: 8px;
}

.portfolio-category {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
}

.thumb {
  position: relative;
  overflow: hidden;
}

.portfolio-overlay {
  position: absolute;
  top: 0;
  left: 0;

  width: 100%;
  height: 100%;

  background-color: #4d5ae5;
  color: #fff;

  padding: 40px 32px;
  line-height: 1.5;

  transform: translateY(100%);
  transition: transform 250ms ease-in-out;
}

.portfolio-card:hover .portfolio-overlay {
  transform: translateY(0);
}

